--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "raw-loader": "^0.5.1",
     "react-transform-hmr": "^1.0.4",
     "rimraf": "^2.4.4",
+    "shipit": "^1.0.2",
+    "shipit-deploy": "^2.4.0",
     "style-loader": "^0.13.0",
     "surge": "latest",
     "url-loader": "^0.5.6",
